Added svsinfo.cpp, updates to README.txt with better instructions. Update CMakeLists.txt to include svsinfo as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ if (${TIFF_FOUND} MATCHES false)
   message(FATAL_ERROR "libtiff not found. Please install libtiff development libraries. Cannot continue!")
 endif()
 
-set( NAME_SRC
+set( MAIN_SRC
   src/olyvslideconv.cpp
   src/jpgcachesupport.cpp
   src/imagesupport.cpp
@@ -36,7 +36,7 @@ set( NAME_SRC
   src/blend.cpp
 )
 
-set( NAME_HEADERS
+set( MAIN_HEADERS
   include/composite.h
   include/imagesupport.h
   include/jpgsupport.h
@@ -44,17 +44,33 @@ set( NAME_HEADERS
   include/tiffsupport.h
 )
 
+set( INFO_SRC
+  src/imagesupport.cpp
+  src/tiffsupport.cpp
+  src/svsinfo.cpp
+)
+
+set ( INFO_HEADERS
+  include/tiffsupport.h
+  include/imagesupport.h
+  include/jpgsupport.h
+)
+
 if (WIN32 OR ${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  list(APPEND NAME_HEADERS include/console-mswin.h)
-  list(APPEND NAME_HEADERS include/getopt-mswin.h)
+  list(APPEND MAIN_HEADERS include/console-mswin.h)
+  list(APPEND MAIN_HEADERS include/getopt-mswin.h)
 else()
-  list(APPEND NAME_HEADERS include/console-unix.h)
+  list(APPEND MAIN_HEADERS include/console-unix.h)
 endif()
 
 
 include_directories( ${OpenCV_INCLUDE_DIRS} ${JPEG_INCLUDE_DIRS} ${TIFF_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include)
-add_executable( olyvslideconv ${NAME_SRC} ${NAME_HEADERS} )
+add_executable( olyvslideconv ${MAIN_SRC} ${MAIN_HEADERS} )
 target_link_libraries( olyvslideconv ${OpenCV_LIBS} ${JPEG_LIBRARIES} ${TIFF_LIBRARIES})
 
+add_executable( svsinfo ${INFO_SRC} ${INFO_HEADERES} )
+target_link_libraries( svsinfo ${TIFF_LIBRARIES})
+
 install(TARGETS olyvslideconv DESTINATION bin)
+install(TARGETS svsinfo DESTINATION bin)
 
