Created autoconf and automake scripts. Updated to work on Windows with MSYS2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
-project( olyvslideconv )
-find_package( OpenCV REQUIRED )
+project( olyvslideconv LANGUAGES CXX )
 find_package( JPEG REQUIRED )
 find_package( TIFF REQUIRED )
+find_package( OpenCV REQUIRED )
 
-macro(my_use_cxx11)
-  if (CMAKE_VERSION VERSION_LESS "3.1")
-    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-      set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
-    endif ()
-  else ()
-    set (CMAKE_CXX_STANDARD 11)
-  endif ()
-endmacro(my_use_cxx11)
-
-my_use_cxx11()
+set(ENABLE_EXPORTS, true)
+#set (CMAKE_CXX_STANDARD 11)
+#set (CMAKE_CXX_EXTENSIONS OFF)
+#set (CMAKE_CXX_STANDARD_REQUIRED YES)
 
 if (${JPEG_FOUND} MATCHES false)
   message(FATAL_ERROR "libjpeg not found. Please install libjpeg-turbo development library or similiar. Cannot continue!")
@@ -68,8 +61,8 @@ include_directories( ${OpenCV_INCLUDE_DIRS} ${JPEG_INCLUDE_DIRS} ${TIFF_INCLUDE_
 add_executable( olyvslideconv ${MAIN_SRC} ${MAIN_HEADERS} )
 target_link_libraries( olyvslideconv ${OpenCV_LIBS} ${JPEG_LIBRARIES} ${TIFF_LIBRARIES})
 
-add_executable( svsinfo ${INFO_SRC} ${INFO_HEADERES} )
-target_link_libraries( svsinfo ${TIFF_LIBRARIES})
+add_executable( svsinfo ${INFO_SRC} )
+target_link_libraries( svsinfo ${OpenCV_LIBS} ${TIFF_LIBRARIES} ${OpenCV_LIBS} )
 
 install(TARGETS olyvslideconv DESTINATION bin)
 install(TARGETS svsinfo DESTINATION bin)
