--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,8 +5,8 @@ olyvslideconv_SOURCES = blend.cc composite.cc composite-read.cc drawing.cc image
 if WINDOWS
   olyvslideconv_SOURCES += console-mswin.cc
 endif
-olyvslideconv_CXXFLAGS = -I$(top_srcdir)/include $(MY_JPEG_CFLAGS) $(LIBTIFF_CFLAGS) $(OPENCV4_CFLAGS)
-olyvslideconv_LDADD = $(MY_JPEG_LIBS) $(OPENCV4_LIBS) $(LIBTIFF_LIBS)
+olyvslideconv_CXXFLAGS = -I$(top_srcdir)/include $(LIBJPEG_CFLAGS) $(LIBTIFF_CFLAGS) $(OPENCV4_CFLAGS)
+olyvslideconv_LDADD = $(LIBJPEG_LIBS) $(OPENCV4_LIBS) $(LIBTIFF_LIBS)
 
 svsinfo_SOURCES = imagesupport.cc svsinfo.cc tiffsupport.cc
 svsinfo_CXXFLAGS = -I$(top_srcdir)/include $(LIBTIFF_CFLAGS)
