Fixed segfault - uninited pointer and vs studio

--- a/Makefile.vc
+++ b/Makefile.vc
@@ -1,36 +1,11 @@
 !INCLUDE nmake.opt
 
-.cpp.obj:
-	$(CXX) -c $<
+all: src
 
-CONV_OBJ	= \
-	olyvslideconv.obj \
-	jpgcachesupport.obj \
- 	imagesupport.obj \
- 	jpgsupport.obj \
- 	tiffsupport.obj \
- 	composite.obj \
-  composite-read.obj \
-  console-mswin.obj \
-  blend.obj \
-  drawing.obj
-
-INFO_OBJ = \
-	svsinfo.obj \
-	imagesupport.obj \
-	jpgsupport.obj \
- 	tiffsupport.obj
-
-all: 	olyvslideconv.exe svsinfo.exe
-
-olyvslideconv.exe: $(CONV_OBJ)
-	$(LD) /debug /out:olyvslideconv.exe /SUBSYSTEM:console $(CONV_OBJ) $(JPEG_LIB) $(TIFF_LIB) $(OPENCV_LIB) 
-
-svsinfo.exe: $(INFO_OBJ)
-	$(LD) /debug /out:svsinfo.exe /SUBSYSTEM:console $(INFO_OBJ) $(JPEG_LIB) $(TIFF_LIB) 
-
+src:: 
+  cd src
+  $(MAKE) /f Makefile.vc
+ 
 clean:
-	-del *.obj
-	-del *.exe
-	-del *.pdb
-  
+  cd src
+  $(MAKE) /f Makefile.vc clean
