--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,40 +3,73 @@ project( olyvslideconv LANGUAGES CXX )
 
 find_package(PkgConfig)
 find_package(OpenCV)
+find_package(ImageMagick COMPONENTS MagickCore MagickWand)
 find_package(TIFF)
 find_package(JPEG)
 
-if (TIFF_FOUND)
-	set (LIBTIFF_LIBRARIES ${TIFF_LIBRARIES})
-	set (LIBTIFF_INCLUDE_DIRS ${TIFF_INCLUDE_DIR})
-endif()
-
-if (DEFINED OpenCV_LIBS)
-	set (OPENCV_LIBRARIES ${OpenCV_LIBS})
-	set (OPENCV_INCLUDE_DIRS ${OpenCV_INCLUDE_DIRS})
-endif()
-
-if (NOT JPEG_FOUND AND PKG_CONFIG_FOUND)
-	pkg_check_modules(LIBJPEG REQUIRED libjpeg)
-endif()
-
 if (JPEG_FOUND)
-	set (LIBJPEG_LIBRARIES ${JPEG_LIBRARIES})
-	set (LIBJPEG_INCLUDE ${JPEG_INCLUDE_DIRS})
+  set (LIBJPEG_LIBRARIES ${JPEG_LIBRARY})
+  set (LIBJPEG_INCLUDE_DIRS ${JPEG_INCLUDE_DIR})
+elseif (PKG_CONFIG_FOUND)
+  pkg_check_modules(LIBJPEG REQUIRED libjpeg)
+else()
+  message(FATAL_ERROR "Jpeg library not found!")
 endif()
 
-if (PKG_CONFIG_FOUND)
-	if (NOT TIFF_FOUND)
-		pkg_check_modules(LIBTIFF REQUIRED libtiff-4)
-	endif()
-	pkg_check_modules(LIBZIP libzip)
-	if (NOT DEFINED OPENCV_LIBRARIES)
-		pkg_check_modules(OPENCV REQUIRED opencv4)
-	endif()
+if (TIFF_FOUND)
+  set (LIBTIFF_LIBRARIES ${TIFF_LIBRARY})
+  set (LIBTIFF_INCLUDE_DIRS ${TIFF_INCLUDE_DIR})
+elseif (PKG_CONFIG_FOUND)
+  pkg_check_modules(LIBTIFF REQUIRED libtiff-4)
+else()
+  message(FATAL_ERROR "LibTiff not found!")
 endif()
 
-if (NOT DEFINED LIBZIP_LIBRARIES)
-	set(LIBZIP_LIBRARIES zip)
+add_definitions(-Wall)
+
+if ("${USE_MAGICK}" STREQUAL "")
+  add_definitions(-DUSE_OPENCV=1)
+  if (OpenCV_FOUND)
+ 	  set (OPENCV_LIBRARIES ${OpenCV_LIBS})
+    set (OPENCV_INCLUDE_DIRS ${OpenCV_INCLUDE_DIR})
+  elseif (PKG_CONFIG_FOUND)
+    pkg_check_modules(OPENCV REQUIRED opencv4)
+  else()
+    message(FATAL_ERROR "OpenCV Libraries not found!")
+  endif()
+else()
+  add_definitions(-DUSE_MAGICK=1)
+  add_definitions(-DMAGICKCORE_QUANTUM_DEPTH=8)
+  add_definitions(-DMAGICKCORE_HDRI_ENABLE=0)
+  add_definitions(-DMAGICK_CODER_MODULE_PATH="/mingw64/lib/ImageMagick-7.0.8/modules-Q16HDRI/coders")
+  add_definitions(-DMAGICK_CODER_FILTER_PATH="/mingw64/lib/ImageMagick-7.0.8/modules-Q16HDRI/filters")
+  add_definitions(-DMAGICK_HOME="/mingw64/lib/ImageMagick-7.0.8")
+  add_definitions(-DMAGICK_MAP_LIMIT="6GB")
+  add_definitions(-DMAGICK_MEMORY_LIMIT="6GB")
+  add_definitions(-DMAGICK_DISK_LIMIT="32GB")
+  add_definitions(-DMAGICK_AREA_LIMIT="100MPP")
+  if (ImageMagick_MagickWand_FOUND AND ImageMagick_MagickCore_FOUND)
+    set (MAGICKWAND_LIBRARIES ${ImageMagick_MagickWand_LIBRARY})
+    set (MAGICKWAND_INCLUDE_DIRS ${ImageMagick_MagickWand_INCLUDE_DIR})
+    set (MAGICKCORE_LIBRARIES ${ImageMagick_MagickCore_LIBRARY})
+    set (MAGICKCORE_INCLUDE_DIRS ${ImageMagick_MagickCore_INCLUDE_DIR})
+  elseif (PKG_CONFIG_FOUND)
+    pkg_check_modules(MAGICKWAND REQUIRED MagickWand)
+    pkg_check_modules(MAGICKCORE REQUIRED MagickCore)
+  else()
+    message(FATAL_ERROR "ImageMagick Wand and Core Libraries not found!")
+  endif()
+endif()
+
+if ("${LIBZIP_LIBRARY}" STREQUAL "")
+  if (PKG_CONFIG_FOUND)
+	  pkg_check_modules(LIBZIP REQUIRED libzip)
+  else()
+	  find_library(LIBZIP_LIBRARIES NAMES zip libzip libzip.dll zip.dll)
+    if (LIBZIP_LIBRARIES_NOTFOUND)
+      message(FATAL_ERROR "LibZip not found!")
+    endif()
+  endif()
 endif()
 
 set(ENABLE_EXPORTS, true)
@@ -91,9 +124,9 @@ else()
 endif()
 
 
-include_directories( ${OPENCV_INCLUDE_DIRS} ${LIBJPEG_INCLUDE_DIRS} ${LIBTIFF_INCLUDE_DIRS} ${LIBZIP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories( ${MAGICKCORE_INCLUDE_DIRS} ${MAGICKWAND_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS} ${LIBJPEG_INCLUDE_DIRS} ${LIBTIFF_INCLUDE_DIRS} ${LIBZIP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_executable( olyvslideconv ${MAIN_SRC} ${MAIN_HEADERS} )
-target_link_libraries( olyvslideconv ${OPENCV_LIBRARIES} ${LIBTIFF_LIBRARIES} ${LIBJPEG_LIBRARIES} ${LIBZIP_LIBRARIES})
+target_link_libraries( olyvslideconv ${MAGICKCORE_LIBRARIES} ${MAGICKWAND_LIBRARIES} ${OPENCV_LIBRARIES} ${LIBTIFF_LIBRARIES} ${LIBJPEG_LIBRARIES} ${LIBZIP_LIBRARIES})
 
 add_executable( svsinfo ${INFO_SRC} )
 target_link_libraries( svsinfo ${LIBTIFF_LIBRARIES})
