Changed zip backend to minizip due to memory hogging of libzip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(OpenCV)
 find_package(ImageMagick COMPONENTS MagickCore MagickWand)
 find_package(TIFF)
 find_package(JPEG)
+find_package(MINIZIP)
 find_package(Threads)
 
 if (JPEG_FOUND)
@@ -59,15 +60,11 @@ else()
   endif()
 endif()
 
-if ("${LIBZIP_LIBRARY}" STREQUAL "")
-  if (PKG_CONFIG_FOUND)
-	  pkg_check_modules(LIBZIP REQUIRED libzip)
-  else()
-	  find_library(LIBZIP_LIBRARIES NAMES zip libzip libzip.dll zip.dll)
-    if (LIBZIP_LIBRARIES_NOTFOUND)
-      message(FATAL_ERROR "LibZip not found!")
-    endif()
-  endif()
+if (MINIZIP_FOUND)
+elseif (PKG_CONFIG_FOUND)
+	  pkg_check_modules(MINIZIP REQUIRED minizip)
+else()
+  message(FATAL_ERROR "Minizip library not found!")
 endif()
 
 set(ENABLE_EXPORTS, true)
@@ -124,9 +121,9 @@ else()
   list(APPEND MAIN_HEADERS include/console-unix.h)
 endif()
 
-include_directories( ${MAGICKCORE_INCLUDE_DIRS} ${MAGICKWAND_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS} ${LIBJPEG_INCLUDE_DIRS} ${LIBTIFF_INCLUDE_DIRS} ${LIBZIP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories( ${MAGICKCORE_INCLUDE_DIRS} ${MAGICKWAND_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS} ${LIBJPEG_INCLUDE_DIRS} ${LIBTIFF_INCLUDE_DIRS} ${MINIZIP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_executable( olyvslideconv ${MAIN_SRC} ${MAIN_HEADERS} )
-target_link_libraries( olyvslideconv ${MAGICKWAND_LIBRARIES} ${MAGICKCORE_LIBRARIES} ${OPENCV_LIBRARIES} ${LIBTIFF_LIBRARIES} ${LIBJPEG_LIBRARIES} ${LIBZIP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries( olyvslideconv ${MAGICKWAND_LIBRARIES} ${MAGICKCORE_LIBRARIES} ${OPENCV_LIBRARIES} ${LIBTIFF_LIBRARIES} ${LIBJPEG_LIBRARIES} ${MINIZIP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable( svsinfo ${INFO_SRC} )
 target_link_libraries( svsinfo ${LIBTIFF_LIBRARIES})
