Updated resizer/scaler to use much less memory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,8 @@ else()
   add_definitions(-DUSE_MAGICK=1)
   add_definitions(-DMAGICKCORE_QUANTUM_DEPTH=16)
   add_definitions(-DMAGICKCORE_HDRI_ENABLE=1)
-  add_definitions(-DMAGICK_MAP_LIMIT="2GB")
-  add_definitions(-DMAGICK_MEMORY_LIMIT="2GB")
+  add_definitions(-DMAGICK_MAP_LIMIT="512MB")
+  add_definitions(-DMAGICK_MEMORY_LIMIT="512MB")
   add_definitions(-DMAGICK_DISK_LIMIT="16GB")
   add_definitions(-DMAGICK_AREA_LIMIT="50MPP")
   if (ImageMagick_MagickWand_FOUND AND ImageMagick_MagickCore_FOUND)
