Updated to build on Windows as well with Msys2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,22 @@
 cmake_minimum_required(VERSION 2.8)
 project( olyvslideconv LANGUAGES C CXX )
 
+option(USE_MAGICK "Use ImageMagick instead of OpenCV for processing." OFF)
+option(USE_OPENCV "Use OpenCV for image processing instead of ImageMagick." ON)
+
 find_package(PkgConfig)
-find_package(OpenCV)
-find_package(ImageMagick COMPONENTS MagickCore MagickWand)
 find_package(TIFF)
 find_package(JPEG)
-find_package(MINIZIP)
 find_package(Threads)
+
+if (USE_MAGICK)
+	find_package(ImageMagick COMPONENTS MagickCore MagickWand)
+	set (USE_OPENCV OFF)
+endif()
+
+if (USE_OPENCV)
+	find_package(OpenCV)
+endif()
 
 if (JPEG_FOUND)
   set (LIBJPEG_LIBRARIES ${JPEG_LIBRARY})
@@ -29,7 +38,7 @@ endif()
 
 add_definitions(-Wall)
 
-if ("${USE_MAGICK}" STREQUAL "")
+if (${USE_MAGICK} STREQUAL "OFF")
   add_definitions(-DUSE_OPENCV=1)
   if (OpenCV_FOUND)
  	  set (OPENCV_LIBRARIES ${OpenCV_LIBS})
@@ -43,8 +52,8 @@ else()
   add_definitions(-DUSE_MAGICK=1)
   add_definitions(-DMAGICKCORE_QUANTUM_DEPTH=16)
   add_definitions(-DMAGICKCORE_HDRI_ENABLE=1)
-  add_definitions(-DMAGICK_MAP_LIMIT="512MB")
-  add_definitions(-DMAGICK_MEMORY_LIMIT="512MB")
+  add_definitions(-DMAGICK_MAP_LIMIT="256MB")
+  add_definitions(-DMAGICK_MEMORY_LIMIT="256MB")
   add_definitions(-DMAGICK_DISK_LIMIT="16GB")
   add_definitions(-DMAGICK_AREA_LIMIT="50MPP")
   if (ImageMagick_MagickWand_FOUND AND ImageMagick_MagickCore_FOUND)
@@ -60,11 +69,12 @@ else()
   endif()
 endif()
 
-if (MINIZIP_FOUND)
-elseif (PKG_CONFIG_FOUND)
-	  pkg_check_modules(MINIZIP REQUIRED minizip)
-else()
-  message(FATAL_ERROR "Minizip library not found!")
+if (PKG_CONFIG_FOUND)
+	pkg_check_modules(MINIZIP minizip)
+endif()
+
+if (NOT MINIZIP_LIBRARIES)
+	message(FATAL_ERROR "Minzip library not found!")
 endif()
 
 set(ENABLE_EXPORTS, true)
