--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,11 +82,13 @@ if (PKG_CONFIG_FOUND)
   pkg_check_modules(MINIZIP minizip2)
   if (NOT MINIZIP_LIBRARIES)
     pkg_check_modules(MINIZIP minizip)
+  else()
+    add_definitions(-DOLY_USE_MZ_VER2=1)
   endif()
 endif()
 
 if (NOT MINIZIP_LIBRARIES)
-	message(FATAL_ERROR "Minzip library >= 2.7.0 not found! Can grab from https://github.com/nmoinvaz/minizip or better yet with your system's package manager!")
+	message(FATAL_ERROR "Minzip library version 1 or 2 not found!")
 endif()
 
 set(ENABLE_EXPORTS, true)
