Fixed strange blending artifacts and compiling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
+if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
+endif()
 project( olyvslideconv LANGUAGES C CXX )
+
+if (CMAKE_TOOLCHAIN_FILE)
+  include(${CMAKE_TOOLCHAIN_FILE})
+endif()
 
 include(CheckStructHasMember)
 
@@ -7,16 +14,23 @@ if (NOT CMAKE_BUILD_TYPE)
   set (CMAKE_BUILD_TYPE Release)
 endif()
 
-set(CMAKE_CXX_FLAGS_DEBUG "-g -pg -O0")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-
 option(USE_MAGICK "Use ImageMagick instead of OpenCV for processing." OFF)
 option(USE_OPENCV "Use OpenCV for image processing instead of ImageMagick." ON)
 
-find_package(PkgConfig)
-find_package(TIFF)
+if (NOT MSVC AND "${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
+  find_package(PkgConfig)
+  set(CMAKE_CXX_FLAGS_DEBUG "-g -pg -O0 -Wall")
+  set(CMAKE_CXX_FLAGS_RELEASE "-g -O3 -Wall")
+endif()
+
 find_package(JPEG)
+find_package(TIFF)
 find_package(Threads)
+if ("\"${CMAKE_CXX_COMPILER_ID}\"" MATCHES "MSVC")
+  find_package(minizip 1)
+  find_path(MINIZIP_INCLUDE_DIRS NAMES zip.h PATH_SUFFIXES minizip)
+  set(MINIZIP_LIBRARIES minizip::minizip)
+endif()
 
 if (USE_MAGICK)
 	find_package(ImageMagick COMPONENTS MagickCore MagickWand)
@@ -44,8 +58,6 @@ elseif (PKG_CONFIG_FOUND)
 else()
   message(FATAL_ERROR "LibTiff not found!")
 endif()
-
-add_definitions(-Wall)
 
 if (${USE_MAGICK} STREQUAL "OFF")
   add_definitions(-DUSE_OPENCV=1)
@@ -78,11 +90,10 @@ else()
   endif()
 endif()
 
-if (PKG_CONFIG_FOUND)
-  pkg_check_modules(MINIZIP minizip2)
+if (NOT MINIZIP_LIBRARIES AND PKG_CONFIG_FOUND)
+  pkg_check_modules(MINIZIP minizip)
   if (NOT MINIZIP_LIBRARIES)
-    pkg_check_modules(MINIZIP minizip)
-  else()
+    pkg_check_modules(MINIZIP minizip2 REQUIRED)
     add_definitions(-DOLY_USE_MZ_VER2=1)
   endif()
 endif()
