--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ find_package(TIFF)
 find_package(Threads)
 if ("\"${CMAKE_CXX_COMPILER_ID}\"" MATCHES "MSVC")
   find_package(minizip 1)
-  find_path(MINIZIP_INCLUDE_DIRS NAMES zip.h PATH_SUFFIXES minizip)
+  find_path(MINIZIP_INCLUDE_DIRS NAMES zip.h PATH_SUFFIXES minizip include)
   set(MINIZIP_LIBRARIES minizip::minizip)
 endif()
 
@@ -93,13 +93,42 @@ endif()
 if (NOT MINIZIP_LIBRARIES AND PKG_CONFIG_FOUND)
   pkg_check_modules(MINIZIP minizip)
   if (NOT MINIZIP_LIBRARIES)
-    pkg_check_modules(MINIZIP minizip2 REQUIRED)
+    pkg_check_modules(MINIZIP minizip2)
     add_definitions(-DOLY_USE_MZ_VER2=1)
+    set(OLY_USE_MZ_VER2 "1")
+  else()
+    if ("${MINIZIP_VERSION}" MATCHES "^2")
+      add_definitions(-DOLY_USE_MZ_VER2=1)
+      set(OLY_USE_MZ_VER2 "1")
+    endif()
   endif()
 endif()
 
 if (NOT MINIZIP_LIBRARIES)
 	message(FATAL_ERROR "Minzip library version 1 or 2 not found!")
+endif()
+
+if (MINIZIP_INCLUDE_DIRS)
+  if (OLY_USE_MZ_VER2)
+    find_path(OLY_MINIZIP_DIR NAMES mz_compat.h PATH_SUFFIXES minizip include)
+    set(OLY_MINIZIP_FILE "${OLY_MINIZIP_DIR}/mz_compat.h")
+  else()
+    find_path(OLY_MINIZIP_DIR NAMES zip.h PATH_SUFFIXES minizip include)
+    set(OLY_MINIZIP_FILE "${OLY_MINIZIP_DIR}/zip.h")
+  endif()
+  message("Set minizip include file=" ${OLY_MINIZIP_FILE})
+  CHECK_STRUCT_HAS_MEMBER(zip_fileinfo mz_dos_date ${OLY_MINIZIP_FILE} OLY_HAVE_MZ_DOS_DATE)
+  CHECK_STRUCT_HAS_MEMBER(zip_fileinfo dosDate ${OLY_MINIZIP_FILE} OLY_HAVE_DOSDATE)
+  CHECK_STRUCT_HAS_MEMBER(zip_fileinfo dos_date ${OLY_MINIZIP_FILE} OLY_HAVE_DOS_DATE)
+  if (OLY_HAVE_MZ_DOS_DATE)
+    add_definitions(-DOLY_HAVE_MZ_DOS_DATE=1)
+  endif()
+  if (OLY_HAVE_DOSDATE)
+    add_definitions(-DOLY_HAVE_DOSDATE=1)
+  endif()
+  if (OLY_HAVE_DOS_DATE)
+    add_definitions(-DOLY_HAVE_DOS_DATE=1)
+  endif()
 endif()
 
 set(ENABLE_EXPORTS, true)
