--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
+
 if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
 endif()
@@ -10,6 +11,61 @@ endif()
 
 include(CheckStructHasMember)
 
+find_package(zlib REQUIRED)
+
+if ("\"${CMAKE_CXX_COMPILER_ID}\"" MATCHES "MSVC")
+  message("Zlib include directory=${ZLIB_INCLUDE_DIR}")
+  find_package(minizip 1 REQUIRED)
+  find_path(MINIZIP_INCLUDE_DIRS NAMES zip.h PATH_SUFFIXES minizip include)
+  message("Minizip include directory=${MINIZIP_INCLUDE_DIRS}")
+  set(CMAKE_REQUIRED_INCLUDES "${MINIZIP_INCLUDE_DIRS};${ZLIB_INCLUDE_DIR}")
+  set(MINIZIP_LIBRARIES minizip::minizip)
+endif()
+
+if (NOT MSVC AND ${CMAKE_CXX_COMPILER_ID} MATCHES "GNU")
+  find_package(PkgConfig)
+  set(CMAKE_CXX_FLAGS_DEBUG "-g -pg -O0 -Wall")
+  set(CMAKE_CXX_FLAGS_RELEASE "-g -O3 -Wall")
+endif()
+
+if (NOT MINIZIP_INCLUDE_DIRS AND PKG_CONFIG_FOUND)
+  pkg_check_modules(MINIZIP minizip)
+  if (NOT MINIZIP_LIBRARIES)
+    pkg_check_modules(MINIZIP minizip2)
+    add_definitions(-DOLY_USE_MZ_VER2=1)
+    set(OLY_USE_MZ_VER2 "1")
+  else()
+    if ("${MINIZIP_VERSION}" MATCHES "^2")
+      add_definitions(-DOLY_USE_MZ_VER2=1)
+      set(OLY_USE_MZ_VER2 "1")
+    endif()
+  endif()
+endif()
+
+if (NOT MINIZIP_INCLUDE_DIRS)
+	message(FATAL_ERROR "Minzip library version 1 or 2 not found!")
+endif()
+
+if (OLY_USE_MZ_VER2)
+  set(OLY_MINIZIP_FILE "mz_compat.h")
+else()
+  set(OLY_MINIZIP_FILE "zip.h")
+endif()
+message("Minizip main include file=${OLY_MINIZIP_FILE}")
+
+CHECK_STRUCT_HAS_MEMBER("zip_fileinfo" "dosDate" "${OLY_MINIZIP_FILE}" OLY_HAVE_DOSDATE LANGUAGE CXX)
+CHECK_STRUCT_HAS_MEMBER("zip_fileinfo" "mz_dos_date" "${OLY_MINIZIP_FILE}" OLY_HAVE_MZ_DOS_DATE LANGUAGE CXX)
+CHECK_STRUCT_HAS_MEMBER("zip_fileinfo" "dos_date" "${OLY_MINIZIP_FILE}" OLY_HAVE_DOS_DATE LANGUAGE CXX)
+if (OLY_HAVE_MZ_DOS_DATE)
+  add_definitions(-DOLY_HAVE_MZ_DOS_DATE=1)
+endif()
+if (OLY_HAVE_DOSDATE)
+  add_definitions(-DOLY_HAVE_DOSDATE=1)
+endif()
+if (OLY_HAVE_DOS_DATE)
+  add_definitions(-DOLY_HAVE_DOS_DATE=1)
+endif()
+
 if (NOT CMAKE_BUILD_TYPE)
   set (CMAKE_BUILD_TYPE Release)
 endif()
@@ -17,21 +73,9 @@ endif()
 option(USE_MAGICK "Use ImageMagick instead of OpenCV for processing." OFF)
 option(USE_OPENCV "Use OpenCV for image processing instead of ImageMagick." ON)
 
-if (NOT MSVC AND "${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-  find_package(PkgConfig)
-  set(CMAKE_CXX_FLAGS_DEBUG "-g -pg -O0 -Wall")
-  set(CMAKE_CXX_FLAGS_RELEASE "-g -O3 -Wall")
-endif()
-
 find_package(JPEG)
 find_package(TIFF)
 find_package(Threads)
-if ("\"${CMAKE_CXX_COMPILER_ID}\"" MATCHES "MSVC")
-  find_package(minizip 1)
-  find_path(MINIZIP_INCLUDE_DIRS NAMES zip.h PATH_SUFFIXES minizip include)
-  set(MINIZIP_LIBRARIES minizip::minizip)
-endif()
-
 if (USE_MAGICK)
 	find_package(ImageMagick COMPONENTS MagickCore MagickWand)
 	set (USE_OPENCV OFF)
@@ -87,47 +131,6 @@ else()
     pkg_check_modules(MAGICKCORE REQUIRED MagickCore)
   else()
     message(FATAL_ERROR "ImageMagick Wand and Core Libraries not found!")
-  endif()
-endif()
-
-if (NOT MINIZIP_LIBRARIES AND PKG_CONFIG_FOUND)
-  pkg_check_modules(MINIZIP minizip)
-  if (NOT MINIZIP_LIBRARIES)
-    pkg_check_modules(MINIZIP minizip2)
-    add_definitions(-DOLY_USE_MZ_VER2=1)
-    set(OLY_USE_MZ_VER2 "1")
-  else()
-    if ("${MINIZIP_VERSION}" MATCHES "^2")
-      add_definitions(-DOLY_USE_MZ_VER2=1)
-      set(OLY_USE_MZ_VER2 "1")
-    endif()
-  endif()
-endif()
-
-if (NOT MINIZIP_LIBRARIES)
-	message(FATAL_ERROR "Minzip library version 1 or 2 not found!")
-endif()
-
-if (MINIZIP_INCLUDE_DIRS)
-  if (OLY_USE_MZ_VER2)
-    find_path(OLY_MINIZIP_DIR NAMES mz_compat.h PATH_SUFFIXES minizip include)
-    set(OLY_MINIZIP_FILE "${OLY_MINIZIP_DIR}/mz_compat.h")
-  else()
-    find_path(OLY_MINIZIP_DIR NAMES zip.h PATH_SUFFIXES minizip include)
-    set(OLY_MINIZIP_FILE "${OLY_MINIZIP_DIR}/zip.h")
-  endif()
-  message("Set minizip include file=" ${OLY_MINIZIP_FILE})
-  CHECK_STRUCT_HAS_MEMBER(zip_fileinfo mz_dos_date ${OLY_MINIZIP_FILE} OLY_HAVE_MZ_DOS_DATE)
-  CHECK_STRUCT_HAS_MEMBER(zip_fileinfo dosDate ${OLY_MINIZIP_FILE} OLY_HAVE_DOSDATE)
-  CHECK_STRUCT_HAS_MEMBER(zip_fileinfo dos_date ${OLY_MINIZIP_FILE} OLY_HAVE_DOS_DATE)
-  if (OLY_HAVE_MZ_DOS_DATE)
-    add_definitions(-DOLY_HAVE_MZ_DOS_DATE=1)
-  endif()
-  if (OLY_HAVE_DOSDATE)
-    add_definitions(-DOLY_HAVE_DOSDATE=1)
-  endif()
-  if (OLY_HAVE_DOS_DATE)
-    add_definitions(-DOLY_HAVE_DOS_DATE=1)
   endif()
 endif()
 
