Improved cmake build under Ubuntu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,8 @@ if ("\"${CMAKE_CXX_COMPILER_ID}\"" MATCHES "MSVC")
   find_package(minizip 1 REQUIRED)
   find_path(MINIZIP_INCLUDE_DIRS NAMES zip.h PATH_SUFFIXES minizip include)
   message("Minizip include directory=${MINIZIP_INCLUDE_DIRS}")
-  set(CMAKE_REQUIRED_INCLUDES "${MINIZIP_INCLUDE_DIRS};${ZLIB_INCLUDE_DIR}")
   set(MINIZIP_LIBRARIES minizip::minizip)
+  set(CMAKE_REQUIRED_INCLUDES "${MINIZIP_INCLUDE_DIRS};${ZLIB_INCLUDE_DIR}")
 else()
   find_package(ZLIB)
 endif()
@@ -53,6 +53,10 @@ else()
   set(OLY_MINIZIP_FILE "zip.h")
 endif()
 message("Minizip main include file=${OLY_MINIZIP_FILE}")
+
+if (NOT MSVC)
+  set(CMAKE_REQUIRED_INCLUDES "${MINIZIP_INCLUDE_DIRS}" "${ZLIB_INCLUDE_DIR}")
+endif()
 
 CHECK_STRUCT_HAS_MEMBER("zip_fileinfo" "dosDate" "${OLY_MINIZIP_FILE}" OLY_HAVE_DOSDATE LANGUAGE CXX)
 CHECK_STRUCT_HAS_MEMBER("zip_fileinfo" "mz_dos_date" "${OLY_MINIZIP_FILE}" OLY_HAVE_MZ_DOS_DATE LANGUAGE CXX)
@@ -189,7 +193,7 @@ else()
   list(APPEND MAIN_SRC src/console-unix.cc)
 endif()
 
-include_directories( ${MAGICKCORE_INCLUDE_DIRS} ${MAGICKWAND_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS} ${LIBJPEG_INCLUDE_DIRS} ${LIBTIFF_INCLUDE_DIRS} ${MINIZIP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${MAGICKCORE_INCLUDE_DIRS} ${MAGICKWAND_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS} ${LIBJPEG_INCLUDE_DIRS} ${LIBTIFF_INCLUDE_DIRS} ${MINIZIP_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_executable( olyvslideconv ${MAIN_SRC} ${MAIN_HEADERS} )
 target_link_libraries( olyvslideconv ${MAGICKWAND_LIBRARIES} ${MAGICKCORE_LIBRARIES} ${OPENCV_LIBRARIES} ${LIBTIFF_LIBRARIES} ${LIBJPEG_LIBRARIES} ${MINIZIP_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
